fix: Increase z-index of SVG icon picker overlay
In the extended view inside the block editor, our model would be rendered behind the extended view. The z-index increase fixes that.

--- a/resources/styles/input.css
+++ b/resources/styles/input.css
@@ -72,7 +72,7 @@
   display: grid;
   position: fixed;
   place-items: center;
-  z-index: 99999;
+  z-index: 100001;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.8);
 }
